// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- files loading 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_ disabled"
        onClick={[Function]}
      />
    </div>
    <div
      className="refresh-btn disabled"
    >
      <span
        className="inner-btn"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
    <div
      className="full-path"
    >
      <span
        className="path"
        onClick={[Function]}
      >
        test.com
      </span>
      <span
        className="separator"
      >
        /
      </span>
    </div>
  </div>
</div>
`;

exports[`2- loaded. no file 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_ disabled"
        onClick={[Function]}
      />
    </div>
    <div
      className="refresh-btn"
    >
      <span
        className="inner-btn"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
    <div
      className="full-path"
    >
      <span
        className="path"
        onClick={[Function]}
      >
        test.com
      </span>
      <span
        className="separator"
      >
        /
      </span>
    </div>
  </div>
  <div
    className="browser no-file"
  >
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3- loaded. with files and folders 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="refresh-btn"
    >
      <span
        className="inner-btn"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
    <div
      className="full-path"
    >
      <span
        className="path"
        onClick={[Function]}
      >
        test.com
      </span>
      <span
        className="separator"
      >
        /
      </span>
    </div>
  </div>
  <div
    className="browser"
  >
    <div
      className="browser-entries"
    >
      <div
        className="browser-entry entry-folder"
        onClick={[Function]}
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-folder"
          >
            <div
              className="shapes"
            >
              <div
                className="shape1"
              />
              <div
                className="shape2"
              />
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          foo
        </div>
      </div>
      <div
        className="browser-entry entry-file"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-file"
          >
            <div
              className="shape"
            >
              
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          file1.txt
        </div>
        <div
          className="entry-size"
        >
          2.82 KB
        </div>
      </div>
      <div
        className="browser-entry entry-file"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-file icon-html"
          >
            <div
              className="shape"
            >
              <div
                className="type-name"
              >
                &lt;/&gt;
              </div>
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          index.html
        </div>
        <div
          className="entry-size"
        >
          12.05 KB
        </div>
      </div>
    </div>
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4- in sub folder 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="refresh-btn"
    >
      <span
        className="inner-btn"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
    <div
      className="full-path"
    >
      <span
        className="path"
        onClick={[Function]}
      >
        test.com
      </span>
      <span
        className="separator"
      >
        /
      </span>
      <span
        className="path"
        onClick={[Function]}
      >
        foo
      </span>
      <span
        className="separator"
      >
        /
      </span>
    </div>
  </div>
  <div
    className="browser"
  >
    <div
      className="browser-entries"
    >
      <div
        className="browser-entry entry-parent-folder"
        onClick={[Function]}
      >
        <div
          className="entry-header"
        >
          <div
            className="entry-icon entry-icon-folder"
          >
            <div
              className="shapes"
            >
              <div
                className="shape1"
              />
              <div
                className="shape2"
              />
            </div>
          </div>
        </div>
        <div
          className="entry-name"
        >
          ..
        </div>
      </div>
      <div
        className="browser-entry entry-file"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-file icon-css"
          >
            <div
              className="shape"
            >
              <div
                className="type-name"
              >
                css
              </div>
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          file1.css
        </div>
        <div
          className="entry-size"
        >
          3.05 KB
        </div>
      </div>
    </div>
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`5- 1 item in checklist 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="items-selected"
    >
      <span
        className="selected-label"
      >
        1 item selected
      </span>
      <div
        className="delete-btn"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    className="browser"
  >
    <div
      className="browser-entries"
    >
      <div
        className="browser-entry entry-folder"
        onClick={[Function]}
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-folder"
          >
            <div
              className="shapes"
            >
              <div
                className="shape1"
              />
              <div
                className="shape2"
              />
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          foo
        </div>
      </div>
      <div
        className="browser-entry entry-file checked"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-file"
          >
            <div
              className="shape"
            >
              
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          file1.txt
        </div>
        <div
          className="entry-size"
        >
          2.82 KB
        </div>
      </div>
      <div
        className="browser-entry entry-file"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-file icon-html"
          >
            <div
              className="shape"
            >
              <div
                className="type-name"
              >
                &lt;/&gt;
              </div>
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          index.html
        </div>
        <div
          className="entry-size"
        >
          12.05 KB
        </div>
      </div>
    </div>
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`6- 2 items in checklist 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_"
        onClick={[Function]}
      />
    </div>
    <div
      className="items-selected"
    >
      <span
        className="selected-label"
      >
        2 items selected
      </span>
      <div
        className="delete-btn"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    className="browser"
  >
    <div
      className="browser-entries"
    >
      <div
        className="browser-entry entry-folder"
        onClick={[Function]}
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_"
              onClick={[Function]}
            />
          </div>
          <div
            className="entry-icon entry-icon-folder"
          >
            <div
              className="shapes"
            >
              <div
                className="shape1"
              />
              <div
                className="shape2"
              />
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          foo
        </div>
      </div>
      <div
        className="browser-entry entry-file checked"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-file"
          >
            <div
              className="shape"
            >
              
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          file1.txt
        </div>
        <div
          className="entry-size"
        >
          2.82 KB
        </div>
      </div>
      <div
        className="browser-entry entry-file checked"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-file icon-html"
          >
            <div
              className="shape"
            >
              <div
                className="type-name"
              >
                &lt;/&gt;
              </div>
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          index.html
        </div>
        <div
          className="entry-size"
        >
          12.05 KB
        </div>
      </div>
    </div>
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`7- all items in checklist 1`] = `
<div
  className="project"
>
  <div
    className="toolbar"
  >
    <div
      className="select-input"
    >
      <div
        className="checkbox_ checked"
        onClick={[Function]}
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
      </div>
    </div>
    <div
      className="items-selected"
    >
      <span
        className="selected-label"
      >
        All items selected
      </span>
      <div
        className="delete-btn"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    className="browser"
  >
    <div
      className="browser-entries"
    >
      <div
        className="browser-entry entry-folder checked"
        onClick={[Function]}
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-folder"
          >
            <div
              className="shapes"
            >
              <div
                className="shape1"
              />
              <div
                className="shape2"
              />
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          foo
        </div>
      </div>
      <div
        className="browser-entry entry-file checked"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-file"
          >
            <div
              className="shape"
            >
              
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          file1.txt
        </div>
        <div
          className="entry-size"
        >
          2.82 KB
        </div>
      </div>
      <div
        className="browser-entry entry-file checked"
      >
        <div
          className="entry-header"
        >
          <div
            className="select-input"
          >
            <div
              className="checkbox_ checked"
              onClick={[Function]}
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            className="entry-icon entry-icon-file icon-html"
          >
            <div
              className="shape"
            >
              <div
                className="type-name"
              >
                &lt;/&gt;
              </div>
            </div>
          </div>
        </div>
        <div
          className="entry-label"
        >
          index.html
        </div>
        <div
          className="entry-size"
        >
          12.05 KB
        </div>
      </div>
    </div>
    <div
      className="file-upload"
    >
      <div
        id="upload-zone"
      >
        <div
          id="upload-zone-layer"
        />
        <div
          id="upload-zone-content"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 199.5h-91.4V64H187.4v135.5H96l160 158.1 160-158.1zM96 402.8V448h320v-45.2H96z"
            />
          </svg>
           
          Drop files or folders here to upload
        </div>
      </div>
    </div>
  </div>
</div>
`;
